--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@
 html {
   scroll-behavior: smooth;
   font-size: clamp(12px, 1.5vw, 18px);
+  scrollbar-width: none;
 
   .fade-in-on-scroll,
   .fade-in-on-scroll-soft {
@@ -56,7 +57,6 @@ html {
   
 
 }
-
 
 body {
   background: var(--background);
