--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400..800&family=Cardo:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root {
-  color-scheme: dark;
   --background: #ffffff;
   --foreground: #0a0a0a;
 }
@@ -15,6 +14,13 @@
   font-style: normal;
 }
 @media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ffffff;
+  }
+}
+
+@media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
     --foreground: #ffffff;
